Margin change for news items on index page

--- a/css/main.scss
+++ b/css/main.scss
@@ -502,8 +502,7 @@ main ul {
 
 /* News items on index page */
 .news-item {
-margin-left: -40px;
-margin-right: -40px;
+margin: 5px -40px 5px -40px;
 padding: 3px 3px 3px 40px;
 background: rgba(0, 0, 0, 0.1) none repeat scroll 0% 0%;
 }
