--- a/css/main.scss
+++ b/css/main.scss
@@ -329,7 +329,9 @@ iframe {
 .breadcrumb{position:relative; height:30px; width:100%; }
 .breadcrumb ul{position:relative; margin:0 5px 0 5px; padding:0; height:30px; background:url('{{ site.baseurl }}/breadcrumbImage.png') 0px -30px repeat-x; }
 .breadcrumb ul li{padding:0; margin:0; list-style:none; float:left; height:30px; display:inline;}
-.breadcrumb ul li a{font: 14px 'Open Sans', sans-serif; /* Arial, Helvetica, sans-serif; */ color:rgb(255,255,255); text-decoration:none; line-height:30px; display:block; background:url('{{ site.baseurl }}/breadcrumbImage.png') 100% -60px no-repeat; padding:0 17px 0 15px; }
+.breadcrumb ul li a{font: 14px 'Open Sans', sans-serif; /* Arial, Helvetica, sans-serif; */
+  color:rgb(255,255,255); text-decoration:none; border: none; line-height:30px; display:block;
+  /* Pystyt linkkien välissä background:url('{{ site.baseurl }}/breadcrumbImage.png') 100% -60px no-repeat; */ padding:0 17px 0 15px; }
 .breadcrumb ul li a:hover {text-decoration:none; color:rbg(255,255,255);}
 .breadcrumb ul li a.active{background:none; color:rgb(255,255,255);}
 .breadcrumb ul li a.active:hover {text-decoration:none;}
