Code fix for the nicetitle remove js

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
   oStyle.href="/nicetitle.css";
   oHead.appendChild(oStyle);
   }
-  if (document.documentElement.clientWidth =< 800 && (typeof oScript !== "undefined")) {
+  if (document.documentElement.clientWidth <= 800 && (typeof oScript !== "undefined")) {
   oScript.parentNode.removeChild(oScript);
   oStyle.parentNode.removeChild(oStyle);
   }
