Nicetitle removal: added resize event listener

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,10 +21,11 @@
   oStyle.href="/nicetitle.css";
   oHead.appendChild(oStyle);
   }
+  window.addEventListener('resize', function(event){
   if (document.documentElement.clientWidth <= 800 && (typeof oScript !== "undefined")) {
   oScript.parentNode.removeChild(oScript);
   oStyle.parentNode.removeChild(oStyle);
-  }
+  }});
 </script>
 
 <!-- Google Analytics -->
