Changes to nicetitle.js add/remove script

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,7 +26,7 @@
 
   if (document.documentElement.clientWidth > 800) {
     oHead.appendChild(oScript);
-    oHead.appendChild(oScript);
+    oHead.appendChild(oStyle);
   }
 
   window.addEventListener('resize', function(event){
