--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,25 +9,21 @@
 </footer>
 
 <script>
-//  if (document.documentElement.clientWidth > 800) {
+  function nt() {
+  if (document.documentElement.clientWidth > 800) {
   var oHead = document.getElementsByTagName('HEAD').item(0);
   var oScript= document.createElement("script");
   oScript.type = "text/javascript";
   oScript.src ="/nicetitle.js";
   oScript.id = "ntjs";
-//  oHead.appendChild(oScript);
+  oHead.appendChild(oScript);
   var oStyle= document.createElement("link");
   oStyle.rel = "stylesheet";
   oStyle.type = "text/css";
   oStyle.href="/nicetitle.css";
   oStyle.id = "ntcss";
-//  oHead.appendChild(oScript);
-//  }
-
-  if (document.documentElement.clientWidth > 800) {
-    oHead.appendChild(oScript);
-    oHead.appendChild(oStyle);
-  }
+  oHead.appendChild(oScript);
+}}();
 
   window.addEventListener('resize', function(event){
   if (document.documentElement.clientWidth <= 800 && (document.getElementById("ntjs") !== null)) { //&& (typeof oScript !== "undefined")
@@ -35,8 +31,7 @@
   oStyle.parentNode.removeChild(oStyle);
   }
   if (document.documentElement.clientWidth > 800 && (document.getElementById("ntjs") === null )) {
-  oHead.appendChild(oScript);
-  oHead.appendChild(oStyle);
+  nt();
   }
   });
 </script>
