Changes to nicetitle.js add/remove script

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
   oStyle.type = "text/css";
   oStyle.href="/nicetitle.css";
   oStyle.id = "ntcss";
-  oHead.appendChild(oScript);
+  oHead.appendChild(oStyle);
 }}
 
   window.onload = nt();
