Testing the nicetitle.js add/remove script

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,16 +28,14 @@
   window.onload = nt();
 
   window.addEventListener('resize', function(event){
-  if (document.documentElement.clientWidth <= 800 && (document.getElementById("ntjs") !== null)) { //&& (typeof oScript !== "undefined")
-  //oScript.parentNode.removeChild(oScript);
-  //oStyle.parentNode.removeChild(oStyle);
+  if (document.documentElement.clientWidth <= 800 && (document.getElementById("ntjs") !== null)) {
   var ntjs = document.getElementById("ntjs");
   ntjs.parentNode.removeChild(ntjs);
   var ntcss = document.getElementById("ntcss");
   ntcss.parentNode.removeChild(ntcss);
   }
   if (document.documentElement.clientWidth > 800 && (document.getElementById("ntjs") === null )) {
-  nt();
+    //nt();
   }
   });
 </script>
