--- a/css/main.scss
+++ b/css/main.scss
@@ -233,7 +233,6 @@ a img { border: 0; } //Remove blue image outline on image links in IE (http://we
 
 a.newqsl { font-weight: bold; }
 
-//#address { width: 300px; margin: 20px auto 20px auto; }
 #address { @extend %clearfix; }
 #address img { float: left; margin: 15px; }
 #address span { display: block; margin-top: 25px; }
@@ -282,10 +281,6 @@ iframe {
 
 
 #footer {
-    /*
-    font-family: "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS",
-    Verdana, "Verdana Ref", sans serif;
-    */
     font-family: 'Open Sans', 'sans-serif';
     /* defined at the top of this stylesheet
     width: 100%;
@@ -329,7 +324,7 @@ iframe {
 .breadcrumb{position:relative; height:30px; width:100%; }
 .breadcrumb ul{position:relative; margin:0 5px 0 5px; padding:0; height:30px; background:url('{{ site.baseurl }}/breadcrumbImage.png') 0px -30px repeat-x; }
 .breadcrumb ul li{padding:0; margin:0; list-style:none; float:left; height:30px; display:inline;}
-.breadcrumb ul li a{font: 14px 'Open Sans', sans-serif; /* Arial, Helvetica, sans-serif; */
+.breadcrumb ul li a{font: 14px 'Open Sans', sans-serif; /*
   color:rgb(255,255,255); text-decoration:none; border: none; line-height:30px; display:block;
   /* Pystyt linkkien välissä background:url('{{ site.baseurl }}/breadcrumbImage.png') 100% -60px no-repeat; */ padding:0 17px 0 15px; }
 .breadcrumb ul li a:hover {text-decoration:none; color:rbg(255,255,255);}
@@ -353,8 +348,8 @@ iframe {
 .breadcrumb{position:static; height: 180px; width:100%; }
 .breadcrumb ul {position:relative; margin:0; padding:0; height:30px; background:#333; background-image: none;  text-align:center; }
 .breadcrumb ul li{padding:0; margin:0; list-style:none; height:30px; display:inline; float: none;}
-.breadcrumb ul li a{font:14px 'Open Sans', sans-serif; /* Arial, Helvetica, sans-serif; */ color:rgb(255,255,255); text-decoration:none; line-height:30px; display:block; background-image: none; background: #333;  }
-.breadcrumb ul li a:hover {text-decoration:none; /* border-bottom: 1px solid #fff; */ color:rbg(255,255,255); background-color: #222; }
+.breadcrumb ul li a{font:14px 'Open Sans', sans-serif; color:rgb(255,255,255); text-decoration:none; line-height:30px; display:block; background-image: none; background: #333;  }
+.breadcrumb ul li a:hover {text-decoration:none; color:rbg(255,255,255); background-color: #222; }
 .breadcrumb ul li a.active{background:none; color:rgb(255,255,255);}
 .breadcrumb ul li a.active:hover {text-decoration:none;}
 .breadcrumb .left, .breadcrumb .right { display: none; }
