--- a/css/main.scss
+++ b/css/main.scss
@@ -19,6 +19,8 @@ $footer-height: 60px; /* Does not adjust the position of #to-top */
 /* Base styles */
 * { padding: 0; margin: 0; }
 
+img, iframe { max-width: 100%; }
+
 html, body {
     font-family: Verdana, Arial, Helvetica, sans-serif;
     font-size: 17px;
@@ -137,12 +139,9 @@ body:before {
 }
 */
 
-img, iframe { max-width: 100%; }
-
 p {
     margin: 10px 0 10px;
     line-height: 1.5;
- /* padding:0 0 80px; */ /* bottom padding clears the #footer */
 }
 
 
@@ -486,7 +485,7 @@ background: rgba(0, 0, 0, 0.06) none repeat scroll 0% 0%;
 .banners { display: flex; }
 .fl-banner { margin-right: 25px; }
 .qrz11search { margin-left: auto; }
-
+}
 
 /* Contact form styles */
 #contact-form { margin: 65px 25px; }
