Add class .image-link to the anchor in header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header" id="header" role="banner">
 <div style="display: inline;">
-<a href="{{ site.url }}"><img src="{{ site.url }}/images/56fl001-timos.png" alt="56FL001's Radio Website"></a>
+<a class="image-link" href="{{ site.url }}"><img src="{{ site.url }}/images/56fl001-timos.png" alt="56FL001's Radio Website"></a>
 </div>
 </header>
 {% comment %}<!-- cssmenubuilder.com menu -->{% endcomment %}
