--- a/css/main.scss
+++ b/css/main.scss
@@ -22,7 +22,7 @@ $footer-height: 60px; /* Does not adjust the position of #to-top */
 img, iframe { max-width: 100%; }
 
 html, body {
-    font-family: Verdana, Arial, Helvetica, sans-serif;
+    font-family: "Open Sans", Verdana, Arial, Helvetica, sans-serif;
     font-size: 17px;
     line-height: 1.6;
     @media all and (max-width: 800px) {
@@ -269,7 +269,6 @@ iframe {
 
 
 #footer {
-    font-family: 'Open Sans', 'sans-serif';
     /* defined at the top of this stylesheet
     width: 100%;
     height: 35px;
@@ -299,7 +298,7 @@ iframe {
 .breadcrumb{position:relative; height:30px; width:100%; }
 .breadcrumb ul{position:relative; margin:0 5px 0 5px; padding:0; height:30px; background:url('{{ site.baseurl }}/breadcrumbImage.png') 0px -30px repeat-x; }
 .breadcrumb ul li{padding:0; margin:0; list-style:none; float:left; height:30px; display:inline;}
-.breadcrumb ul li a{font: 14px 'Open Sans', sans-serif; color:rgb(255,255,255); border: none; /*
+.breadcrumb ul li a{font-size: 14px; color:rgb(255,255,255); border: none; /*
   color:rgb(255,255,255); text-decoration:none; border: none; line-height:30px; display:block; */
   /* Pystyt linkkien välissä background:url('{{ site.baseurl }}/breadcrumbImage.png') 100% -60px no-repeat; */ padding:0 17px 0 15px; }
 .breadcrumb ul li a:hover {text-decoration:none; color:rbg(255,255,255);}
@@ -323,7 +322,7 @@ iframe {
 .breadcrumb{position:static; height: 180px; width:100%; }
 .breadcrumb ul {position:relative; margin:0; padding:0; height:30px; background:#333; background-image: none;  text-align:center; }
 .breadcrumb ul li{padding:0; margin:0; list-style:none; height:30px; display:inline; float: none;}
-.breadcrumb ul li a{font:14px 'Open Sans', sans-serif; color:rgb(255,255,255); text-decoration:none; line-height:30px; display:block; background-image: none; background: #333;  }
+.breadcrumb ul li a{font-size:14px; color:rgb(255,255,255); text-decoration:none; line-height:30px; display:block; background-image: none; background: #333;  }
 .breadcrumb ul li a:hover {text-decoration:none; color:rbg(255,255,255); background-color: #222; }
 .breadcrumb ul li a.active{background:none; color:rgb(255,255,255);}
 .breadcrumb ul li a.active:hover {text-decoration:none;}
@@ -332,8 +331,6 @@ iframe {
 
 /* daltonlp.com semi-transparent background */
 .transp-bg {
-    font-family: 'Open Sans', 'sans-serif';
-    font-weight: normal;
     padding: 40px;
     margin: 0px auto auto;
     width: 75%;
@@ -410,7 +407,6 @@ caption overlapping figure http://codepen.io/adobe/pen/bhoGK
 
   border: 1px solid #ccc;
   padding: 3px;
-  font-family: 'Open Sans', 'sans-serif';
   font-size: 14px;
   color: #fff;
   margin: 35px 0 0;
