--- a/css/main.scss
+++ b/css/main.scss
@@ -295,7 +295,7 @@ iframe {
 
 
 /* Generated via www.cssmenubuilder.com */
-.breadcrumb{position:relative; height:30px; width:100%; }
+.breadcrumb { position:relative; height:30px; width:100%; @extend clearfix; }
 .breadcrumb ul{position:relative; margin:0 5px 0 5px; padding:0; height:30px; background:url('{{ site.baseurl }}/breadcrumbImage.png') 0px -30px repeat-x; }
 .breadcrumb ul li{padding:0; margin:0; list-style:none; float:left; height:30px; display:inline;}
 .breadcrumb ul li a{font-size: 14px; color:rgb(255,255,255); text-decoration:none; border: none; line-height:30px;
