Removed clearfix floats from containers

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 </div>
 </header>
 {% comment %}<!-- cssmenubuilder.com menu -->{% endcomment %}
-<nav class="site-nav breadcrumb" role="navigation" style="float: left;">  <span class="left"></span>
+<nav class="site-nav breadcrumb" role="navigation">  <span class="left"></span>
   <ul>
     <li><a href="{{ site.url }}" title="Main Page">Main Page</a></li>
     <li><a href="{{ site.url }}/station" title="Some Info About my Station">Info About my Station</a></li>
