--- a/css/main.scss
+++ b/css/main.scss
@@ -239,8 +239,7 @@ iframe {
     width: 100%;
  }
 
-#content {
-    float: left;
+#content
     color: #000;
     width: 100%;
     display: inline;
