--- a/css/main.scss
+++ b/css/main.scss
@@ -294,7 +294,7 @@ iframe {
 
 /* Generated via www.cssmenubuilder.com */
 .breadcrumb { position:relative; height:30px; width:100%; @extend clearfix; }
-.breadcrumb ul{position:relative; margin:0 5px 0 5px; padding:0; height:30px; background:url('{{ site.baseurl }}/breadcrumbImage.png') 0px -30px repeat-x; }
+.breadcrumb ul{position:relative; margin:0 5px 0 5px; padding:0; height:30px; background: #222 url('{{ site.baseurl }}/breadcrumbImage.png') 0px -30px repeat-x; }
 .breadcrumb ul li{padding:0; margin:0; list-style:none; float:left; height:30px; display:inline;}
 .breadcrumb ul li a{font-size: 14px; color:rgb(255,255,255); text-decoration:none; border: none; line-height:30px;
   display:block;
@@ -303,8 +303,8 @@ iframe {
 .breadcrumb ul li a:hover {text-decoration:none; color:rbg(255,255,255);}
 .breadcrumb ul li a.active{background:none; color:rgb(255,255,255);}
 .breadcrumb ul li a.active:hover {text-decoration:none;}
-.breadcrumb .left{position:absolute; top:0px; left:0px; width:10px; height:30px; display:block; z-index:1; background:url('{{ site.baseurl }}/breadcrumbImage.png') 0% 0px no-repeat;}
-.breadcrumb .right{position:absolute; top:0px; right:0px; width:10px; height:30px; display:block; z-index:1; background:url('{{ site.baseurl }}/breadcrumbImage.png') 100% -90px no-repeat; }
+.breadcrumb .left{position:absolute; top:0px; left:0px; width:10px; height:30px; display:block; z-index:1; background: #222 url('{{ site.baseurl }}/breadcrumbImage.png') 0% 0px no-repeat;}
+.breadcrumb .right{position:absolute; top:0px; right:0px; width:10px; height:30px; display:block; z-index:1; background: #222 url('{{ site.baseurl }}/breadcrumbImage.png') 100% -90px no-repeat; }
 
 
 @media only screen and (max-width: 800px) {
