--- a/css/main.scss
+++ b/css/main.scss
@@ -293,7 +293,7 @@ iframe {
 
 
 /* Generated via www.cssmenubuilder.com */
-.breadcrumb { position:relative; height:30px; width:100%; @extend clearfix; }
+.breadcrumb { position:relative; height:30px; width:100%; @extend %clearfix; }
 .breadcrumb ul{position:relative; margin:0 5px 0 5px; padding:0; height:30px; background: #222 url('{{ site.baseurl }}/breadcrumbImage.png') 0px -30px repeat-x; }
 .breadcrumb ul li{padding:0; margin:0; list-style:none; float:left; height:30px; display:inline;}
 .breadcrumb ul li a{font-size: 14px; color:rgb(255,255,255); text-decoration:none; border: none; line-height:30px;
@@ -573,7 +573,7 @@ background: rgba(0, 0, 0, 0.06) none repeat scroll 0% 0%;
 
 
 
-/* Clearfix SCSS placeholder, use with @extend clearfix; where you need it */
+/* Clearfix SCSS placeholder, use with @extend %clearfix; where you need it */
 
 %clearfix {
   /* For modern browsers */
