--- a/css/main.scss
+++ b/css/main.scss
@@ -255,25 +255,26 @@ iframe {
     width: 100%;
     height: 75px;
 
+    background-color: #000;
     /* Fallback for <IE9 and other older browsers */
     // Note that we would need to create a modernizr fallback for browsers that do not support multiple backgrounds, if this would
     // be a different background image not included in the multiple background images declaration (otherwise browsers that support
     // multiple background images would download this extra image unneccessarily.)
-    background: #000 url('{{ site.baseurl }}/images/footer-bg.jpg') center center repeat;
+    background: url('{{ site.baseurl }}/images/footer-bg.jpg') center center repeat;
 
     /* Multi-background supporting browsers */
     // First background image is on top: http://css-tricks.com/stacking-order-of-multiple-backgrounds/
-    background: #000 url('{{ site.baseurl }}/images/Earth-07052014.png') right top no-repeat, url('{{ site.baseurl }}/images/footer-bg.jpg') center center repeat;
+    background: url('{{ site.baseurl }}/images/Earth-07052014.png') right top no-repeat, url('{{ site.baseurl }}/images/footer-bg.jpg') center center repeat;
 
-    //Narrow viewports, if the rule is here only the earth image on the multi-background declaration appears back in FF after resize
-    //@media all and (max-width: 800px) {
-    //background: #000 url('none');
-    //}
+    //Narrow viewports, if the rule is here, only the earth image on the multi-background declaration appears back in FF after resize
+    @media all and (max-width: 800px) {
+    background: #000 url('none');
+    }
 }
-//Narrow viewports, if the rule is here both images on the multi-background declaration appear back in FF after resize
-@media all and (max-width: 800px) {
+//Narrow viewports, if the rule is here, both images on the multi-background declaration appear back in FF after resize
+/* @media all and (max-width: 800px) {
   #header { background: #000 url('none'); }
-}
+}*/
 
 
 #footer {
