--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,8 @@
 <a class="image-link" href="{{ site.url }}"><img src="{{ site.url }}/images/56fl001-timos.png" alt="56FL001's Radio Website"></a>
 </div>
 </header>
-{% comment %}<!-- cssmenubuilder.com menu -->{% endcomment %}
-<nav class="site-nav breadcrumb" role="navigation">  <span class="left"></span>
+
+<nav class="site-nav" role="navigation">
   <ul>
     <li><a href="{{ site.url }}" title="Main Page">Main Page</a></li>
     <li><a href="{{ site.url }}/station" title="Some Info About my Station">Info About my Station</a></li>
@@ -13,5 +13,4 @@
     <li><a href="{{ site.url }}/files" title="Some Radio Related Files">Downloads</a></li>
     <li><a href="{{ site.url }}/links" title="Links to Other Radio Related Websites">Links</a></li>
   </ul>
-  <span class="right"></span>
 </nav>
