--- a/css/main.scss
+++ b/css/main.scss
@@ -300,6 +300,7 @@ iframe {
 nav ul {
     list-style: none;
     margin-left: 0;
+    padding-left: 15px;
 }
     nav li,
         nav li > a {
@@ -317,6 +318,7 @@ nav ul {
         .site-nav a {
             padding: 5px 10px;
             color: #fff;
+            font-size: 14px;
             text-decoration: none;
         }
 
@@ -332,34 +334,6 @@ nav ul {
 }
 /* Site navigation END */
 
-
-/* Generated via www.cssmenubuilder.com */
-/*
-.breadcrumb { position:relative; height:30px; width:100%; @extend %clearfix; }
-.breadcrumb ul{position:relative; margin:0 5px 0 5px; padding:0; height:30px; background: #222 url('{{ site.baseurl }}/breadcrumbImage.png') 0px -30px repeat-x; }
-.breadcrumb ul li{padding:0; margin:0; list-style:none; float:left; height:30px; display:inline;}
-.breadcrumb ul li a{font-size: 14px; color:rgb(255,255,255); text-decoration:none; border: none; line-height:30px;
-  display:block;
-  /* Pystyt linkkien välissä background:url('{{ site.baseurl }}/breadcrumbImage.png') 100% -60px no-repeat; */
-/*
-  padding:0 17px 0 15px; }
-.breadcrumb ul li a:hover {text-decoration:none; color:rbg(255,255,255);}
-.breadcrumb ul li a.active{background:none; color:rgb(255,255,255);}
-.breadcrumb ul li a.active:hover {text-decoration:none;}
-.breadcrumb .left{position:absolute; top:0px; left:0px; width:10px; height:30px; display:block; z-index:1; background: #222 url('{{ site.baseurl }}/breadcrumbImage.png') 0% 0px no-repeat;}
-.breadcrumb .right{position:absolute; top:0px; right:0px; width:10px; height:30px; display:block; z-index:1; background: #222 url('{{ site.baseurl }}/breadcrumbImage.png') 100% -90px no-repeat; }
-
-@media all and (max-width: 800px) {
-/* Generated via www.cssmenubuilder.com */
-/*
-.breadcrumb { position: static; height: 180px; }
-.breadcrumb ul { position: relative; margin: 0; background-image: none; background-color: #333; text-align: center; }
-.breadcrumb ul li { height: 30px; float: none; }
-.breadcrumb ul li a { background-image: none; background-color: #333; }
-.breadcrumb ul li a:hover { background-color: #222; }
-.breadcrumb .left, .breadcrumb .right { display: none; }
-}
-*/
 
 /* daltonlp.com semi-transparent background */
 .transp-bg {
