--- a/css/main.scss
+++ b/css/main.scss
@@ -22,7 +22,7 @@ $footer-height: 60px; /* Does not adjust the position of #to-top */
 img, iframe { max-width: 100%; }
 
 html, body {
-    font-family: "Open Sans", Verdana, Arial, Helvetica, sans-serif;
+    font-family: "proxima-nova", Verdana, Arial, Helvetica, sans-serif;
     font-size: 17px;
     line-height: 1.6;
     @media all and (max-width: 800px) {
@@ -147,17 +147,17 @@ p {
 
 
 h1, h2 {
-    font-family: "sansationregular", "Open Sans", Verdana, Arial, Helvetica, sans-serif;
+    font-family: "league-gothic", "Open Sans", Verdana, Arial, Helvetica, sans-serif;
     font-weight: 400;
     color: rgba(104, 102, 102, 1);
     line-height: 1.2;
 }
 h1 {
-    font-size: 28px;
+    font-size: 33px;
     margin: 25px 0 25px;
 }
 h2 {
-    font-size: 22px;
+    font-size: 29px;
     text-transform: capitalize;
     margin: 38px 0 25px;
     color: #505a6b; /* rgba() fallback for color, does not seem to work in IE 10's IE7 mode (document mode) though, works in IE8 and for background-color in IE7 */
@@ -318,7 +318,7 @@ nav ul {
         .site-nav a {
             padding: 5px 10px;
             color: #fff;
-            font-size: 14px;
+            font-size: 15px;
             text-decoration: none;
         }
 
