Use Proxima Nova for nicetitle

--- a/nicetitle.css
+++ b/nicetitle.css
@@ -5,7 +5,7 @@ div.nicetitle {
     left: 0px;
     color: white;
     font-size: 13px;
-    font-family: Verdana, Helvetica, Arial, sans-serif;
+    font-family: "proxima-nova", Verdana, Helvetica, Arial, sans-serif;
     width: 25em;
     font-weight: bold;
     background: url(images/ntbg.png);
