--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
 
   <title>{% if page.title %}{{ page.title }} &ndash; 56FL001{% else %}{{ site.title }}{% endif %}</title>
 
-  <link rel="dns-prefetch" href="//fonts.googleapis.com">
+  <link rel="dns-prefetch" href="https://use.typekit.net">
 
   <meta name="author" content="56FL001 Timo">
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
