Changed the font stack for the html document

--- a/css/main.scss
+++ b/css/main.scss
@@ -22,7 +22,9 @@ $footer-height: 60px; /* Does not adjust the position of #to-top */
 img, iframe { max-width: 100%; }
 
 html, body {
-    font-family: "proxima-nova", Verdana, Arial, Helvetica, sans-serif;
+    font-family: "Proxima Nova Regular", "Segoe UI", Roboto, "Droid Sans", "Helvetica Neue", Arial, sans-serif;
+    font-style: normal;
+    font-weight: 400;
     font-size: 17px;
     line-height: 1.6;
     @media all and (max-width: 800px) {
