--- a/css/main.scss
+++ b/css/main.scss
@@ -156,6 +156,9 @@ p {
 h1, h2 {
     font-family: "league-gothic", Verdana, Arial, Helvetica, sans-serif;
     font-weight: 400;
+    font-variant-ligatures: common-ligatures;
+    font-feature-settings: "kern";
+	  font-kerning: normal;
     color: rgba(104, 102, 102, 1);
     line-height: 1.2;
 }
