--- a/css/main.scss
+++ b/css/main.scss
@@ -166,6 +166,15 @@ h1 {
 
 .wf-loading h1 {
   font-size: 29px;
+  opacity: 0;
+  -webkit-transition: opacity 0.4s ease-in;
+  -moz-transition: opacity 0.4s ease-in;
+  -o-transition: opacity 0.4s ease-in;
+  transition: opacity 0.4s ease-in;
+}
+
+.wf-inactive h1, .wf-active h1 {
+  opacity: 1;
 }
 
 h2 {
