--- a/css/main.scss
+++ b/css/main.scss
@@ -156,7 +156,7 @@ p {
 h1, h2 {
     font-family: "league-gothic", Verdana, Arial, Helvetica, sans-serif;
     font-weight: 400;
-    color: rgba(104, 102, 102, 1);
+    color: #444;
     line-height: 1.2;
     -webkit-transition: font 0.3s ease-in;
     -moz-transition: font 0.3s ease-in;
