Changed the font stack for headings

--- a/css/main.scss
+++ b/css/main.scss
@@ -157,7 +157,7 @@ p {
 
 h1, h2 {
     //font-family: "league-gothic", Verdana, Arial, Helvetica, sans-serif;
-    font-family: "kulturista-web", serif;
+    font-family: "kulturista-web", "Times New Roman", serif;
     font-weight: 600;
     color: #444;
     line-height: 1.2;
