--- a/css/main.scss
+++ b/css/main.scss
@@ -33,7 +33,7 @@ body {
     -o-background-size: cover;
     background-size: cover;
 
-    font-family: "Proxima Nova Regular", "Segoe UI", Roboto, "Droid Sans", "Helvetica Neue", Arial, sans-serif;
+    font-family: "source-sans-pro", "Segoe UI", Roboto, "Droid Sans", "Helvetica Neue", Arial, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 17px;
