--- a/css/main.scss
+++ b/css/main.scss
@@ -19,6 +19,10 @@ $footer-height: 60px; /* Does not adjust the position of #to-top */
 /* Base styles */
 * { padding: 0; margin: 0; }
 
+html {
+    font-size: 100%;
+}
+
 html, body {
     height: 100%; /* height + html & body here gets footer to bottom */
 }
@@ -36,10 +40,10 @@ body {
     font-family: "proxima-nova", "Segoe UI", Roboto, "Droid Sans", "Helvetica Neue", Arial, sans-serif;
     font-style: normal;
     font-weight: 400;
-    font-size: 21px;
+    @include font-size(19);
     line-height: 1.6;
     @media all and (max-width: 800px) {
-    font-size: 16px;
+    @include font-size(16);
      }
 }
 
@@ -609,6 +613,18 @@ background: rgba(0, 0, 0, 0.06) none repeat scroll 0% 0%;
 
 //Center things
 .center { margin-left: auto; margin-right: auto; text-align: center; }
+
+
+/**
+ * $size: Font-size to be converted from `px` to `rem`
+ * $base: Base font-size (Change its value as per your need)
+ * @return void
+ */
+@mixin font-size($size, $base: 16) {
+  font-size: $size; // fallback for old browsers
+  font-size: ($size / $base) * 1rem;
+}
+
 
 /* Clearfix SCSS placeholder, use with @extend %clearfix; where you need it */
 %clearfix {
