--- a/css/main.scss
+++ b/css/main.scss
@@ -520,6 +520,10 @@ background: rgba(0, 0, 0, 0.06) none repeat scroll 0% 0%;
 .qrz11search { margin-left: auto; }
 }
 
+.qrz11search table { border: 0px; background-color: #ececec; opacity: 0.90; }
+.qrz11search label { @include font-size(16); }
+.qrz11search input[type=submit] { @include font-size(15); }
+
 /* .item-list, ul with no ul styling */
 .item-list {
   margin: 0;
